# mu_aog

aog-fix-match1/: README.md  app.py  main.py  pyproject.toml  requirements.txt  skills-lock.json
aog-fix-match1/data/analysis/: README.md  TEMP_21_CMM_RELATED_PARTS_202604151715.csv  ZSHT_202604141503.csv  aog_with_exchange_match.csv  求援数据_with_pnr_id.csv
aog-fix-match1/data/processed/: aog_chapter21.csv  aog_enriched.csv  aog_with_exchange_match.csv
aog-fix-match1/data/raw/: 21章拆换记录.csv  README.md  TEMP_21_CMM_PNR_202604141359.csv  ZCAR_202604141000.csv  mu_aog.csv  pn_id_mapper.csv  求援数据.csv
aog-fix-match1/pages/: 1_按零件号.py  2_按功能ID.py
aog-fix-match1/scripts/: enrich_aog_exchange.py  filter_chapter21.py  match_aog_exchange.py  match_aog_id.py
